TUSCANY-3395 - Tyding up the ContributionScanner API to scan the contribution and produce a list of Artifacts with proper URI and Location URL instead of doing this in two steps
git-svn-id: https://svn.apache.org/repos/asf/tuscany/sca-java-2.x/trunk@891986 13f79535-47bb-0310-9956-ffa450edef68